--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
     <h1 class="text-2xl"> <a class="cursor-pointer" href="./index.html"> Greenden</a></h1>
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+    <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="w-10 md:hidden">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
     </svg>
@@ -31,6 +31,22 @@
         <li><a class="hover:underline hover:text-black" href="#">Contact</a> </li>
     </ul>
 </nav>
+
+<!-- Sidenavbar -->
+
+<section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000"
+    style="width: 50%; height:100vh; right: -50%;">
+    <div class="text-right p-5">
+        <p id="close-nav" class="inline cursor-pointer">X</p>
+    </div>
+
+    <ul class="flex flex-col gap-20 item-center text-gray-600"></ul>
+    <li class="list-none"><a class="hover:underline hover:text-black" href="./index.html">Home</a></li>
+    <li class="list-none"><a class="hover:underline hover:text-black" href="./product.html">Products</a></li>
+    <li class="list-none"><a class="hover:underline hover:text-black" href="#">Contact</a></li>
+    </ul>
+
+</section>
 
 <!-- Contact Form --> 
 
@@ -84,6 +100,8 @@
 
 
 </section>
+
+<script src = "contact.js"></script>
 
 </body>
 
