--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Responsive Navbar -->
      <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-10 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
@@ -24,6 +24,21 @@
             <li><a class="hover:underline hover:text-black" href="./contact.html">Contact</a></li>
         </ul>
      </nav>
+
+     <!-- Side Navbar -->
+
+     <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style = "width: 50%; height:100vh; right: -50%;">
+    <div class = "text-right p-5">
+        <p id="close-nav" class="inline cursor-pointer">X</p>
+    </div>
+
+        <ul class="flex flex-col gap-20 item-center text-gray-600"></ul>
+            <li class = "list-none"><a class="hover:underline hover:text-black" href="#">Home</a></li>
+            <li class = "list-none"><a class="hover:underline hover:text-black" href="./product.html">Products</a></li>
+            <li class = "list-none"><a class="hover:underline hover:text-black" href="./contact.html">Contact</a></li>
+        </ul>
+
+     </section>
 
      <!-- Header section-->
 
@@ -166,6 +181,6 @@
 
     </section>
 
-
+<script src="index.js"></script>
 </body>
 </html>
