--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
 
 <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
     <h1 class="text-2xl"> <a class= "cursor-pointer" href="./index.html"> Greenden</a></h1>
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+    <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="w-10 md:hidden">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
     </svg>
@@ -30,14 +30,30 @@
     </ul>
 </nav>
 
+<!-- Sidenavbar -->
+
+<section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000"
+    style="width: 50%; height:100vh; right: -50%;">
+    <div class="text-right p-5">
+        <p id="close-nav" class="inline cursor-pointer">X</p>
+    </div>
+
+    <ul class="flex flex-col gap-20 item-center text-gray-600"></ul>
+    <li class="list-none"><a class="hover:underline hover:text-black" href="./index.html">Home</a></li>
+    <li class="list-none"><a class="hover:underline hover:text-black" href="#">Products</a></li>
+    <li class="list-none"><a class="hover:underline hover:text-black" href="./contact.html">Contact</a></li>
+    </ul>
+
+</section>
+
 <!-- Hero -->
 
 <section class="text-center p-5">
 
 <h1 class="text-black mt-5 font-bold text-3xl ">Our Products</h1>
-<input type="text" class="border border-black mt-3 p-2 placeholder-gray-500" style="width:80%" placeholder="Search for a Product...">
+<input id="search" type="text" class="border border-black mt-3 p-2 placeholder-gray-500" style="width:80%" placeholder="Search for a Product...">
 
-<div class="grid grid-cols-2 md:grid-cols-4 mt-8">
+<div id="product-container" class="grid grid-cols-2 md:grid-cols-4 mt-8 ">
     <div>
         <img src="./image/indoorPlant.png" alt="indoor" class="inline hover:shadow-xl transform hover:-translate-y-2">
         <h1 class="font-bold">Zamioculcas</h1>
@@ -126,7 +142,7 @@
 
 
 </section>
-
+<script src="product.js"></script>
 </body>
 
 </html>
